# scaffold-scale

./: scale.cabal
src/Scale/: Compile.hs  Optimise.hs  Parser.hs  Scale.hs  Types.hs  Util.hs
src/Scale/Backends/: C.hs  Legacy.hs  LegacyZMQ.hs  Rkt.hs  X86.hs
src/Scale/Backends/C/: edison.h
src/Scale/Backends/Legacy/: Prelude.hs
src/Scale/Backends/LegacyZMQ/: Prelude.hs
src/Scale/Backends/LegacyZMQ/Legacy/: Prelude.hs
src/Scale/Drivers/: Fake.hs  POSIX.hs
src/Scale/Frontends/: CScale.hs  FScale.hs  GScale.hs
src/Scale/Frontends/CScale/: Compiler.hs  Types.hs
src/Scale/Frontends/FScale/: Compiler.hs  Parser.hs  Types.hs
src/Scale/Frontends/GScale/: .GFScale.hs.swp  Compiler.hs  GFScale.hs  Parser.hs  Types.hs
test/: openhouse.sc  test-read.sc  test-simple.sc  test-wkshop.sc  test.sc  testcmd.sc  testlet.sc  testnested.sc  testpure.sc
