Name:                scale
Version:             0.1
Description:         Smart City Applications LanguagE
License:             MIT
Author:              Pedro Martins
Maintainer:          pedromartins.pt@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.2

Executable scc
  Build-Depends: base, bytestring, parsec, process, template-haskell, th-lift, syb, optparse-applicative
  Main-is:  Scale/Scale.hs
  Other-Modules:
    Scale.Optimise,
    Scale.Types,
    Scale.Backends.Legacy,
    Scale.Frontends.FScale.Compiler,
    Scale.Frontends.FScale.Parser,
    Scale.Frontends.FScale.Types,
    Scale.Drivers.Fake
    Scale.Drivers.POSIX
  Hs-Source-Dirs: src

Library
  Exposed-Modules:
    Scale.Backends.Legacy.Prelude,
    Scale.Backends.Legacy,
    Scale.Frontends.FScale.Compiler,
    Scale.Frontends.FScale.Parser,
    Scale.Frontends.FScale.Types,
    Scale.Types,
    Scale.Optimise,
    Scale.Drivers.Fake
  Hs-Source-Dirs: src
